--- a/package.json
+++ b/package.json
@@ -5,5 +5,12 @@
     "express": "^4.21.1",
     "pg": "^8.13.0",
     "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  },
+  "scripts": {
+    "start": "nodemon app.js",
+    "test": "jest"
   }
 }
