--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "nodemon": "^3.1.7"
   },
 "scripts": {
-  "start": "nodemon app.js",
+  "dev": "nodemon app.js",
   "test": "jest",
-  "build": "node app.js"
+  "start": "node app.js"
 }
 }
